src/App.css
/* Global CSS */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");

@font-face {
  font-family: Hero;
  src: url(./Hero-Regular.ttf);
}

body {
  margin: 0;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  background-color: #212429;
  color: #f0f0f0;
}
h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-family: "Poppins", sans-serif;
  margin: 0;
}
:root {
  --bg-shade: #212429;
  --bright-pink: #ff0050;
  --light-pink: #fdc6d1;
  --light: #f0f0f0;
  --white: #ffffff;
  --dark: #2e3047;
  --bg-card: linear-gradient(145deg, #1e2126, #23262b);
  --bg-card2: linear-gradient(145deg, #262932, #2d3140);
  --bg-card3: linear-gradient(145deg, #181a1f, #20222a);
  --card-shadow: -6px -6px 16px rgba(255, 255, 255, 0.02),
    6px 6px 12px rgba(0, 0, 0, 0.4);
  --card-shadow-hover: inset -6px -6px 16px rgba(255, 255, 255, 0.02),
    inset 6px 6px 12px rgba(0, 0, 0, 0.35);
  --btn-shadow: -6px -6px 16px rgba(255, 255, 255, 0.1),
    6px 6px 12px rgba(0, 0, 0, 0.6);
  --btn-shadow-hover: inset -6px -6px 16px rgba(255, 255, 255, 0.035),
    inset 6px 6px 12px rgba(0, 0, 0, 0.5);
}

.btn-primary {
  height: 3rem;
  font-family: "Poppins", sans-serif;
  border-radius: 0.7rem;
  background: var(--bg-card);
  border: none;
  transition: 0.3s ease-in-out;
  box-shadow: var(--btn-shadow);
  color: var(--bright-pink);
  cursor: pointer;
}
.btn-primary:hover {
  background: var(--bg-card3);
  box-shadow: var(--btn-shadow-hover);
}

/* .btn-primary:active {
  box-shadow: inset -6px -6px 16px rgba(255, 255, 255, 0.035),
    inset 6px 6px 12px rgba(0, 0, 0, 0.5);
} */
/* Global CSS Ends */
/* Main Headings */

/* Heading 1 */
h1 {
  font-family: "Poppins", sans-serif;
  font-size: 56px;
  font-weight: 700;
  line-height: 67px;
}
/* Heading 2 */
h2 {
  font-family: "Poppins", sans-serif;
  font-size: 48px;
  font-weight: 700;
  line-height: 58px;
}
/* Heading 3 */
h3 {
  font-family: "Poppins", sans-serif;
  color: var(--bright-pink);
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 34px;
}

/* Pragraphs text large medium small */
/* Body 1 */
.text-lg {
  color: var(--light);
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 27px;
}
/* Body 2 */
.text-md {
  color: var(--light);
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
}
/* Body 3 */
.text-sm {
  color: var(--light);
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 21px;
}

/* Section Titles */
/* Skills & About Me */
.section--title {
  color: var(--light);
  font-size: 21px;
  text-align: center;
  font-style: normal;
  font-weight: 600;
  line-height: 32px;
  display: flex;
  align-items: flex-start;
}
/* Portfolio, Testimonial & Contact Me */
.sub--title {
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
}
/* Section Titles Ends */

/* Navbar Style Start */
.navbar {
  z-index: 1000;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 5.5rem 1.5rem 5.5rem;
  background-color: #212429;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.navbar--items > ul {
  list-style: none;
  display: flex;
  align-items: flex-start;
  gap: 42.667px;
  text-decoration: none;
}
.navbar--items ul > li > a {
  text-decoration: none;
  display: inline-block;
  transition: 0.3s ease-in-out;
}
.navbar--items ul > li:hover > a {
  transform: scale(1.3);
  color: #bdbdbd;
}
/* Navbar Content */
.navbar--content {
  color: var(--light);
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  cursor: pointer;
}
.navbar--active-content {
  color: var(--bright-pink);
}

/* Hero Section Style */
.hero--section {
  margin: 8rem 2rem 2rem 2rem;
  display: flex;
  grid-template-columns: repeat(2, 1fr);
  padding: 8rem 4rem 4rem 4rem;
  align-items: center;
  justify-content: space-between;
  gap: 32px;
  border-radius: 30px;
  background: var(--bg-card);
  box-shadow: -6px -6px 16px rgba(255, 255, 255, 0.02),
    6px 6px 12px rgba(0, 0, 0, 0.4);
}
.section--title {
  font-size: 2rem;
  color: var(--light);
  font-weight: 700;
  line-height: 30px;
  align-self: stretch;
}
.name {
  color: var(--bright-pink);
}

.hero--section--content-box {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
}
.hero--section--content {
  display: flex;
  font-weight: 900;
  flex-direction: column;
  align-items: flex-start;
  gap: 21.333px;
}
.hero--section--content--box > button {
  margin-top: 1.5rem;
}
.hero--section--title {
  color: var(--white);
  font-family: "Poppins", sans-serif;
  font-size: 4rem;
  font-weight: 700;
  line-height: 70px;
  align-self: stretch;
}
.hero--section--title--color {
  color: var(--white);
}
.hero--section-description {
  color: var(--light);
  font-size: 24px;
  font-weight: 400;
  line-height: 36px;
}

.hero--social--container {
  width: 100%;
}
.hero--social--icon > ul {
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1.5rem;
  flex-shrink: 0;
  text-decoration: none;
}
.hero--social--icon a {
  color: white;
  transition: color 0.3s;
}
.hero--social--icon a:hover {
  color: var(--bright-pink);
  cursor: pointer;
}
.hero--social--icon button {
  height: 3rem;
  width: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Poppins", sans-serif;
  border-radius: 0.7rem;
  background: var(--bg-card);
  border: none;
  transition: 0.3s ease-in-out;
  box-shadow: var(--btn-shadow);
  color: var(--bright-pink);
  cursor: pointer;
}

.hero--social--icon button:hover {
  background: var(--bg-card3);
  box-shadow: var(--btn-shadow-hover);
}

.hero--section--img {
  display: flex;
}
.hero--section--img > img {
  width: 40rem;
  height: 40rem;
}
/* ... */

